2003-03-14  Alexandre Oliva  <aoliva@redhat.com>

	* sysdeps/unix/sysv/linux/mips/kernel_sigaction.h
	(_KERNEL_NSIG_BPW): Define in terms of _MIPS_SZLONG.
	* sysdeps/unix/sysv/linux/mips/sigaction.c: Define restore and
	restore_rt functions.  Use them.

	* sysdeps/unix/sysv/linux/mips/sys/tas.h (_test_and_set): Don't
	.set mips2 on new abis.

2003-03-13  Ulrich Drepper  <drepper@redhat.com>

	* posix/getconf.c: Recognize POSIX2_SYMLINKS.
	* sysdeps/generic/bits/confname.h: Define _PC_2_SYMLINKS.
	* sysdeps/posix/fpathconf.c: Handle _PC_2_SYMLINKS.
	* sysdeps/posix/pathconf.c: Likewise.
	* sysdeps/unix/sysv/linux/fpathconf.c: Likewise.
	* sysdeps/unix/sysv/linux/pathconf.c: Likewise.
	* sysdeps/unix/sysv/linux/pathconf.h: Define statfs_symlinks.

	* sysdeps/unix/sysv/linux/linux_fsinfo.h: Define some more magic
	words.

2003-03-14  Alexandre Oliva  <aoliva@redhat.com>

	* include/gmp.h: Include/gmp-mparam.h.
	* stdlib/strtod.c: Include gmp-mparam.h before gmp.h and
	gmp-impl.h.

	* elf/dl-conflict.c: Don't compile _dl_resolve_conflicts if
	ELF_MACHINE_NO_RELA is set.
	* elf/rtld.c (dl_main): No prelink support for REL-only.

	* sysdeps/generic/ldconfig.h (FLAG_MIPS64_LIBN32,
	FLAG_MIPS64_LIBN64): Define.
	* elf/cache.c (print_entry): Handle mips64 n32 and n64.

	* sysdeps/mips/memcpy.S: Map t0-3 to a4-7 on new abis.
	* sysdeps/mips/memset.S: Likewise.
	* sysdeps/mips/sys/regdef.h: Alias a4-7 or t0-3 to $8-11
	depending on the ABI.

	* sysdeps/mips/atomicity.h (exchange_and_add, atomic_add):
	Don't .set mips2 on new abi.
	(compare_and_swap): Likewise.  Support 64-bit longs on n64.

	* stdlib/fpioconst.h: Include gmp.h with angle brackets.

2003-03-13  Roland McGrath  <roland@redhat.com>

	* elf/dl-load.c (_dl_map_object_from_fd): Bail if no PT_LOAD phdrs
	found.  Reported by Alexandre Oliva <aoliva@redhat.com>.

2003-03-13  Alexandre Oliva  <aoliva@redhat.com>

	* stdio-common/_itoa.c (_itoa_base_table): Make 64-bit
	literals long long.